# piano-transformer

./: .gitignore  LICENSE  README.md  config.yaml  generate.py  main.py  preprocess.py  pyproject.toml  requirements.txt  train.py
Moonbeam-MIDI-Foundation-Model/: MOONBEAM_CHANGES.md  analysis_results.json  compare_tokenizers.py  data_preprocess.py  debug.sbatch  fine-tuning-large-batch.sh  fine-tuning-large.sh  fine-tuning-small-batch.sh  fine-tuning-small.sh  fine-tuning.sbatch  fine-tuning.sh  inference-large-batch.sh  inference-large.sh  inference-small-batch.sh  inference-small.sh  inference.sh  post-process.py  requirements-claix.txt  test-imports.py  tokenizer_test.py
datasets/: maestro.py
frechet-music-distance-main/: .gitignore  README.md  compute_fmd.ipynb  fmd_tutorial.ipynb  requirements.txt
models/: transformer.py
notebooks/: augmentation_experiments.ipynb  evaluation_demo.ipynb  model_first_baseline.ipynb  model_mistral-162M_remi_maestro.ipynb  model_mistral309M_remi_maestro.ipynb  model_mistral_remi_maestro.ipynb  parse_midi.ipynb  tokenization_experiments.ipynb  train_transformer.ipynb
scripts/: check_dups.py  copy_wandb_runs.py  eval_setup.py  evaluate.py  evaluate_direct.py  file_tree.sh  flatten_adl.py  flatten_aria.py  generate.py  preprocess.py  run.sh  run_generate.sh  run_mgeval.py  run_train.sh  submit.sh  submit_config.yaml  submit_evaluation.py  submit_evaluation.sh  submit_evaluation_direct.py  submit_experiment.py  submit_experiment.sh  submit_generate.sh  submit_train.sh  train.py
survey-app/: analyze_ratings.ipynb  app.py
(+154 files in other folders)
